--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img id="img-logo" class="img-logo" src="./image/Makeup Logo.png" alt="logo" width="100px" height="100px">
             <ul id="lista" class="list" >
                 <li class="nav-item"><a href="./page/maquiagem.html">MAQUIAGEM</a></li>
-                <li class="nav-item"><a href="#">BLOG</a></li>
+                <li class="nav-item"><a href="./page/blog.html">BLOG</a></li>
                 <li class="nav-item"><a href="./page/contato.html">CONTATO</a></li>
             </ul>
             <button class="btn">
@@ -28,7 +28,7 @@
         <div class="menu" id="menu">
             <ul id="lista-mobi" class="lista-mobi" >
                 <li class="nav-item-mobi"><a href="./page/maquiagem.html">MAQUIAGEM</a></li>
-                <li class="nav-item-mobi"><a href="#">BLOG</a></li>
+                <li class="nav-item-mobi"><a href="./page/blog.html">BLOG</a></li>
                 <li class="nav-item-mobi"><a href="./page/contato.html">CONTATO</a></li>
             </ul>
 
@@ -52,13 +52,27 @@
                     <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aut similique temporibus culpa delectus consequuntur praesentium tempora cumque dolores quis eveniet fuga, debitis, nisi eum. Temporibus itaque ipsa esse excepturi.</h4>
                 <a href="click para saber mais"></a>
             </div>
-            <div>
-                <h1></h1>
-            </div>
+            
             <div class="container-2">
                 <img src="./image/imagem-boca.png" alt="">
             </div>
+            <div class="procura-produto">
+                <h1>Encontre nossos produtos clicando aqui</h1>
+                <button><a href="./page/maquiagem.html">Ver produtos</a></button>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa harum tenetur natus repudiandae ipsa modi temporibus laudantium obcaecati commodi, sint omnis nemo, rem officia nihil ullam. Harum error numquam perferendis?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, quam, odit dolor, laboriosam aliquam ex modi consequuntur minus soluta voluptates eaque. Dolorem quas itaque, quaerat sed molestias esse non! Aliquid.</p>
+            </div>
         </div>
+    </section>
+    <section>
+        <div class="tutorial">
+        <h1 class="cuide-bem">Gostaria de ver um tutorial de Make</h1>
+        <p class="lorem">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam non voluptatem doloribus laboriosam totam optio repellendus eos facilis, assumenda inventore earum nostrum, et fugit! Commodi repellat dolorem harum distinctio voluptates!</p>
+        <p class="lorem">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius molestias eos illo? Quas, unde mollitia non veniam beatae vel recusandae provident et dolores, cumque voluptatibus fugiat ex asperiores expedita architecto?</p>
+        <button class="click"><a href="https://www.youtube.com/watch?v=yoFN9IeLX9Y&t=8s">Click aqui</a></button>
+        <br><br>
+        <img class="paleta" src="./image/imagem-paleta.png" alt="">
+    </div>
     </section>
     </main>
     <br><br>
